grammar.txt
Варіант 18

1. <signal-program> --> <program>
2. <program> --> PROGRAM <procedure-identifier> ; <block>. 
3. <block> --> BEGIN <statements-list> END
4. <statements-list> --> <statement> <statements-list> | <empty>
5. <statement> --> LOOP <statements-list> ENDLOOP ; | CASE <expression> OF <alternatives-list> ENDCASE ;
6. <alternatives-list> --> <alternative> <alternatives-list> | <empty>
7. <alternative> --> <expression> : / <statements-list> \
8. <expression> --> <multiplier><multipliers-list> 
9. <multipliers-list> --> <multiplication-instruction> <multiplier><multipliers-list> | <empty>
10. <multiplication-instruction> --> * | / | MOD
11. <multiplier> --> <variable-identifier> | <unsigned-integer>
12. <variable-identifier> --> <identifier>
13. <procedure-identifier> --> <identifier>
14. <identifier> --> <letter><string>
15. <string> --> <letter><string> | <digit><string> | <empty>
16. <unsigned-integer> --> <digit><digits-string>
17. <digits-string> --> <digit><digits-string> | <empty>
18. <digit> --> 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9
19. <letter> --> A | B | C | D | ... | Z
